# asai-youtube

./: .env  .gitignore  .local  .obsidian  AGENTS.md  CLAUDE.md  Copilot-Indexed-Files-1-20-2025.md  README.md  mutagen.yml  temp_tree_output.txt  video-01.md
.claude/: plans  settings.json
.github/: pull_request_template.md
.obsidian/: appearance.json  community-plugins.json  daily-notes.json  hotkeys.json  todoist-token
.stfolder/: syncthing-folder-8912ed.txt
.trash/: 72NH issues.md  Birth plan - Episiotomy.md  CLAUDE.md  Documentation sync between Obsidian and Github projects.md  Test.md  Untitled 3.md  Untitled 4.md  create VMs in macos for android and linux desktop.md  nikhil-terms-of-service-cogitas.md  property task.md  test task.md  test1234.md
00-inbox/: Aerospace macos.md  Bonsai plant 72NH.md  Cordlife cord blood co.md  Dusk para-zeta obsidian vault reference.md  Freelance gigs for AI PM.md  Geoshred app.md  Homerow.md  Idea obsidian web viewer is better than browsers sometimes.md  Macos system vs. user packages and config.md  Media server.md  Meta 2025 employment investigation.md  Meta termination - tech recover.md  Obsidian AI workflow.md  Obsidian outlines.md  mutagen.md  (+14 more)
projects/healthcare-agent/vanilla-cc/: .dockerignore  .gitignore  app.py  docker-compose.yml  pyproject.toml
projects/healthcare-agent/vanilla-cc/docs/: PROJECT-PLAN.md
projects/healthcare-agent/vanilla-cc/src/agents/: base_agent.py  record_agent.py
projects/healthcare-agent/vanilla-cc/src/database/: init.sql
projects/healthcare-agent/vanilla-cc/src/utils/: pdf_generator.py
(+3506 files in other folders)
