[project]
name = "healthcare-ai-assistant"
version = "0.1.0"
description = "Healthcare AI assistant with Claude Agent SDK and Chainlit"
requires-python = ">=3.10"
dependencies = [
    "chainlit>=1.4.0",
    "claude-agent-sdk>=0.1.0",
    "anthropic>=0.40.0",
    "reportlab>=4.2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
